--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -2,3 +2,4 @@ version: v2
 name: buf.build/escape-ship/gatewaysrv
 deps:
   - buf.build/googleapis/googleapis
+  - buf.build/grpc-ecosystem/grpc-gateway
